src/test/deca/context/valid/print_assign_cont_01Decompiled.deca
{
	int x;
	print((x = 2));
}
