src/test/deca/context/invalid/objet/missing_type_exp.deca
// Description:
//    print initialisation sans type.
//
// Resultats:
//      Error
//
// Historique:
//    cree le 01/01/2023

{
    print(x = 4);
}
